# Patata-Engine

./: .clang-format  .gitignore  .gitmodules  Build_Vulkan-Loader_for_mingw.ps1  CMakeLists.txt  COPYRIGHT.txt  LICENSE  NOTICE.txt  README.md  README.md.backup  README_en.md  build_vulkan_for_mingw.ps1  clang-format.sh  meson.build  meson_options.txt  patata.yaml
.cache/clangd/index/: API_Graphics_Switch.cpp.6B145BA70A5CCA46.idx  API_Graphics_Switch.hpp.1C6686FD1517E32A.idx  Events.hpp.9E71F6DD97D4BC03.idx  Main_events.cpp.F166DBF697D3BAE6.idx  Opengl_context.cpp.45F0378604D05702.idx  Opengl_context.hpp.344B66E2A3EB64BD.idx  Setup_Vulkan.cpp.CE2B6C4F9A2EF138.idx  Vulkan.hpp.66655BFCE13BA20A.idx  begin.cpp.9F465D3A4F7C9E89.idx  begin.hpp.98D413A3CF27587D.idx  finish.cpp.E21B826EBF3E2138.idx  finish.hpp.92821F0A8E76B0E5.idx  main.cpp.EE1EE22DBFA869DC.idx  window.cpp.568707D75C239106.idx  window.hpp.84ED5BAA4A0513AA.idx
LICENSES/: Apache-2.0.txt  LGPL v2.1.txt  MIT.txt  zlib.txt
assets/: CMakeLists.txt  meson.build
assets/icon/: patata_icon.svgz  patata_icon_16.avif  patata_icon_16.xcf  patata_icon_24.xcf
assets/state/: Screenshot_20230309_161227.avif
data/: CMakeLists.txt  licenses-debug.txt  licenses-release.txt  meson.build  patata.yaml  patata_icon.rc
data/assets/: CMakeLists.txt  meson.build
data/assets/icon/: patata-debug.ase  patata-release.ase  patata.ase
doc/: README.md  README_en.md
doc/Compile/: build_linux_en.md  build_linux_es.md
doc/Config/: Config_en.md  Config_es.md
docs/: README.md  README_en.md  building.md  building_linux.md
example/: Main.cpp  meson.build
examples/Simple Program/: CMakeLists.txt  Main.cpp  meson.build  meson_options.txt
include/: API_Graphics_Switch.hpp  EngineInfo.hpp  GameMainLoop.hpp  Opengl_context.hpp  Patata_Engine.hpp  Vulkan.hpp  begin.hpp  finish.hpp  init.hpp  init_graphics_switcher.hpp  sdl.hpp  terminal_colors.hpp  window.hpp
include/Core/: Events.hpp  Log.hpp  Patata_Engine.hpp  Window.hpp  terminal_colors.hpp  window.hpp
include/Graphics/: API_Graphics_Switch.hpp  OpenGL.hpp  Vulkan.hpp
include/PatataEngine/: Libexport.hpp  Log.hpp  PatataEngine.hpp  TerminalColors.hpp  Window.hpp
include/PatataEngine/Graphics/: OpenGLContext.hpp  OpenGLRenderer.hpp  VulkanRenderer.hpp
include/Patata_Engine/: Patata_Engine.hpp  Window.hpp
include/Patata_Engine/Graphics/: OpenGL_Context.hpp  OpenGL_Renderer.hpp  Vulkan_Renderer.hpp
scripts/: debug_run_patata_engine.sh
src/: CMakeLists.txt  Log.hpp  Main.cpp  PatataEngine.rc  TerminalColors.hpp  meson.build
src/Core/: Input.cpp  Input.hpp  Main_Input.cpp  Main_Loop.cpp  PatataEngine.cpp  PatataEngineImpl.hpp  Render.cpp  Render.hpp  Start_And_End.cpp  main.cpp  patata.rc
src/ImGUI/: DrawDebugUI.cpp  DrawDebugUI.hpp  ImGUIFrame.cpp  ImGUIFrame.hpp  ImGUISetupBackend.cpp  ImGUISetupBackend.hpp
src/Log/: ErrorMessages.cpp  ExitLog.cpp  ExitLog.hpp  Log.hpp  Mapache.cpp  Mapache.hpp  Messages.cpp  Messages.hpp  OpenGL_Info.cpp  OpenGL_Info.hpp  Setup_Vulkan_Log.cpp  Setup_Vulkan_Log.hpp  Start_Patata_Log_Info.cpp  Start_Patata_Log_Info.hpp  TerminalColors.hpp  Vulkan_Info.cpp  Vulkan_Info.hpp  WindowLog.cpp  WindowLog.hpp  Window_Icon_Set_Status.cpp  YamlErrors.cpp  YamlErrors.hpp
src/Log/Win/: OpenGL_Info_Win.cpp  Setup_Vulkan_Log_Win.cpp  Start_Patata_Log_Info_Win.cpp  Vulkan_Info_Win.cpp  WindowLogWin.cpp  Window_Icon_Set_Status_Win.cpp
src/Opengl/: OpenGL_Minimun_Version.cpp  OpenGL_Renderer.cpp  OpenGL_Set_ViewPort_And_Resize.cpp  Opengl_Context.cpp
src/RaccoonRenderer/: RaccoonRenderer.cpp  RaccoonRenderer.hpp  RaccoonRendererInit.cpp
src/RaccoonRenderer/Opengl/: OpenGL_Renderer.cpp  OpenGL_Renderer.hpp  OpenGL_Set_ViewPort_And_Resize.cpp  OpenGL_Set_ViewPort_And_Resize.hpp
src/RaccoonRenderer/Vulkan/: Setup_Vulkan_Renderer.cpp  Setup_Vulkan_Renderer.hpp  Vulkan_CommandBuffer.cpp  Vulkan_CommandBuffer.hpp  Vulkan_ImageView.cpp  Vulkan_ImageView.hpp  Vulkan_Instance.cpp  Vulkan_Instance.hpp  Vulkan_Logical_And_Queue.cpp  Vulkan_Logical_And_Queue.hpp  Vulkan_PipeLine.cpp  Vulkan_PipeLine.hpp  Vulkan_RenderPass.cpp  Vulkan_Select_Device.cpp  Vulkan_Select_Device.hpp  Vulkan_SwapChain.cpp  Vulkan_SwapChain.hpp
src/Vulkan/: Setup_Vulkan.cpp  Setup_Vulkan_Renderer.cpp  Vulkan_CommandBuffer.cpp  Vulkan_ImageView.cpp  Vulkan_Instance.cpp  Vulkan_Logical_And_Queue.cpp  Vulkan_PipeLine.cpp  Vulkan_RenderPass.cpp  Vulkan_SwapChain.cpp
src/Window/: Window.cpp  Window.hpp  Window_Icon.cpp
src/base/Core/: begin.cpp  finish.cpp  init_graphics_switcher.cpp  init_sdl.cpp  main.cpp  patata.rc  sdl.cpp
src/base/Opengl/: Opengl_context.cpp
src/base/Vulkan/: Setup_Vulkan.cpp  Start_Vulkan.cpp  Vulkan_info.cpp
src/base/Window/: window.cpp  window_icon.cpp
src/base/core/: init_sdl.cpp  main.cpp
src/base/window/: window.cpp
